# slint-node-editor

./: ACCESSIBILITY.md  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  REFACTOR_PLAN.md  SIMPLIFICATION_PLAN.md  build.rs  node-editor-app.slint  node-editor-building-blocks.slint  node-editor.slint
.github/workflows/: rust.yml
docs/: zoom-scaling-plan.md
examples/advanced/: Cargo.toml  build.rs
examples/advanced/src/: main.rs
examples/advanced/ui/: filter_node.slint  ui.slint
examples/all-features/: Cargo.toml
examples/all-features/src/: main.rs
examples/all-features/ui/: filter_node.slint  instructions_overlay.slint  pin_encoding.slint  ui.slint
examples/animated-links/: Cargo.toml  build.rs
examples/animated-links/src/: main.rs
examples/custom-shapes/: Cargo.toml  build.rs
examples/edge-fade/: Cargo.toml  build.rs
examples/edge-fade/src/: main.rs
examples/minimal/: Cargo.toml  build.rs
examples/pin-compatibility/: Cargo.toml  README.md  build.rs
examples/sugiyama/: Cargo.toml  build.rs
examples/sugiyama-stress-test/: Cargo.toml  build.rs
examples/zoom-stress-test/: Cargo.toml
examples/zoom-stress-test/src/: main.rs
examples/zoom-stress-test/ui/: control_node.slint  display_node.slint  input_node.slint  ui.slint
src/: callbacks.rs  controller.rs  graph.rs  grid.rs  hit_test.rs  layout.rs  lib.rs  links.rs  path.rs  selection.rs  setup.rs  state.rs  tracking.rs
tests/: level1_init.rs  level2_drag.rs  level3_links.rs  level4_selection.rs  level5_keyboard.rs  level6_advanced.rs  level7_scalability.rs  level8_globals_and_transform_scale.rs
tests/common/: harness.rs  mod.rs
tests/ui/: test.slint
(+13 files in other folders)
