[package]
name = "slint-node-editor"
version = "0.1.0"
edition = "2021"
authors = ["Till Adam <till.adam@kdab.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, generic Slint component library for building visual graph editors"
repository = "https://github.com/slint-ui/slint"
homepage = "https://slint.dev"
documentation = "https://docs.rs/slint-node-editor"
keywords = ["gui", "node-editor", "graph", "slint", "visual-programming"]
categories = ["gui", "visualization"]
readme = "README.md"
rust-version = "1.70"
include = [
    "src/**/*",
    "*.slint",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
slint = { path = "../../../../Rust/slint/slint/api/rs/slint", default-features = false, features = ["std", "compat-1-2"] }

[dev-dependencies]
i-slint-backend-testing = { path = "../../../../Rust/slint/slint/internal/backends/testing" }

[build-dependencies]
slint-build = { path = "../../../../Rust/slint/slint/api/rs/build" }

# [workspace]
# members = ["examples/advanced", "examples/minimal", "examples/custom-shapes", "examples/animated-links", "examples/pin-compatibility"]
# Workspace disabled when used as a path dependency