[package]
name = "zoom-stress-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", features = ["compat-1-2"] }
slint-node-editor = { path = "../../" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
